--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.562.0",
     "mongodb": "^6.20.0",
     "next": "16.0.0",
     "next-auth": "^4.24.13",
+    "next-themes": "^0.4.6",
+    "pusher": "^5.3.2",
+    "pusher-js": "^8.4.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
