--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.562.0",
     "mongodb": "^6.20.0",
-    "next": "16.0.0",
+    "next": "^16.1.3",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "pusher": "^5.3.2",
     "pusher-js": "^8.4.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
